# camspec

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: colorchecker_24_D65.csv
include/css/: calib.hpp  chart.hpp  daylight.hpp  io.hpp  jiang.hpp  pipeline.hpp  priors.hpp  profile.hpp  refdata.hpp  spectral.hpp
profiles/: IMG_8956_D65.txt
src/: calib.cpp  chart.cpp  daylight.cpp  io.cpp  jiang.cpp  main.cpp  pipeline.cpp  priors.cpp  profile.cpp  refdata.cpp  spectral.cpp
tests/: identity_test.cpp
